kubernetes/apps/actions-runner-system/actions-runner-controller/runners/nix/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nix-runner
spec:
  endpointSelector:
    matchLabels:
      actions.github.com/scale-set-name: nix-runner
      app.kubernetes.io/component: runner
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: niks3
            app.kubernetes.io/instance: niks3
      toPorts:
        - ports:
            - port: "5751"
              protocol: TCP
    - toEntities:
        - world
  egressDeny:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
